@@ -63,7 +63,7 @@ Supported commands:
     RD:foo       deletes foo
 
 - S:
-  Only implemented in a "quick hack" version that doesn't support wildcards.
+  Name matching is fully supported, directories are ignored.
 
 - UI+/UI-
   Switching the slightly faster bus protocol for the VC20 on and off works,
@@ -84,6 +84,9 @@ oscillator of the AVR even if calibrated. You really need an external
 Other important notes:
 ======================
 - File overwrite (@foo) is implemented by deleting the file first.
+- File sizes in the directory are in blocks (of 254 bytes), but
+  the blocks free message actually reports free clusters. It is
+  a compromise of compatibility, accuracy and code size.
 
 Compilation notes:
 ==================
